<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.login.SignInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_sign_in"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@id/login_btn"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top|start"
            android:src="@drawable/ic_back"
            app:tint="@color/grey5"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:translationZ="1dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in_title"
            android:fontFamily="@font/exo2"
            android:layout_marginBottom="20dp"
            android:textSize="40sp"
            android:textColor="@color/grey5"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyEditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:hint="@string/your_email"
                android:textSize="20sp"
                android:fontFamily="@font/exo2"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyEditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            app:endIconCheckable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:hint="@string/your_password"
                android:textSize="20sp"
                android:fontFamily="@font/exo2"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/remember_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/exo2"
            android:textSize="20sp"
            android:textColor="@color/grey5"
            android:gravity="center"
            android:buttonTint="@color/grey5"
            android:checked="true"/>

    </LinearLayout>


    <android.widget.Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_centerHorizontal="true"
        android:background="@drawable/light_positive_btn"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login"
        android:fontFamily="@font/exo2"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"/>


    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/login_btn"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_user"
            android:fontFamily="@font/exo2"
            android:textSize="20sp"
            android:textColor="@color/grey1"/>


        <TextView
            android:id="@+id/sign_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:fontFamily="@font/exo2"
            android:textSize="24sp"
            android:textColor="@color/hippie_blue"
            android:textStyle="bold"/>

    </LinearLayout>


</RelativeLayout>